[gd_scene load_steps=6 format=2]

[ext_resource path="res://code/hostile/HostileIKLeg.gd" type="Script" id=1]
[ext_resource path="res://code/hostile/BaseHostileLeg.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx/thump1.mp3" type="AudioStream" id=3]

[sub_resource type="ArrayMesh" id=1]
resource_name = "leg1_Cylinder"
surfaces/0 = {
"aabb": AABB( -0.380338, -3.19042, -0.348773, 0.760677, 3.19463, 0.779101 ),
"array_data": PoolByteArray( 198, 175, 117, 190, 155, 82, 124, 191, 216, 132, 38, 189, 138, 205, 241, 123, 238, 54, 158, 54, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 92, 216, 141, 190, 3, 85, 124, 191, 177, 113, 200, 61, 134, 252, 245, 125, 230, 54, 144, 55, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 16, 174, 117, 190, 18, 87, 124, 191, 190, 17, 114, 62, 178, 2, 246, 126, 220, 54, 59, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 160, 215, 13, 190, 91, 88, 124, 191, 6, 244, 172, 62, 212, 6, 245, 126, 212, 54, 171, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 186, 214, 26, 179, 199, 88, 124, 191, 222, 244, 191, 62, 0, 10, 244, 125, 210, 54, 24, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 159, 215, 13, 62, 91, 88, 124, 191, 6, 244, 172, 62, 44, 6, 246, 125, 211, 54, 133, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 16, 174, 117, 62, 18, 87, 124, 191, 194, 17, 114, 62, 78, 2, 250, 126, 219, 54, 244, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 92, 216, 141, 62, 3, 85, 124, 191, 180, 113, 200, 61, 122, 252, 8, 125, 230, 54, 104, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 197, 175, 117, 62, 155, 82, 124, 191, 224, 132, 38, 189, 118, 205, 14, 122, 238, 54, 225, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 87, 217, 13, 190, 164, 80, 124, 191, 204, 121, 17, 190, 141, 172, 235, 122, 235, 54, 157, 53, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 82, 217, 13, 62, 165, 80, 124, 191, 205, 121, 17, 190, 115, 172, 21, 121, 235, 54, 98, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 24, 68, 75, 178, 227, 79, 124, 191, 162, 124, 55, 190, 109, 129, 27, 120, 213, 54, 233, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 24, 68, 75, 178, 227, 79, 124, 191, 162, 124, 55, 190, 109, 129, 229, 121, 214, 54, 142, 52, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 86, 85, 189, 178, 198, 47, 76, 192, 164, 8, 1, 188, 15, 130, 230, 57, 228, 47, 62, 48, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 30, 146, 74, 178, 0, 249, 137, 59, 0, 0, 0, 50, 0, 127, 230, 63, 85, 53, 189, 50, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 72, 154, 36, 178, 112, 132, 226, 190, 100, 146, 178, 190, 113, 129, 216, 111, 156, 57, 230, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 72, 154, 36, 178, 112, 132, 226, 190, 100, 146, 178, 190, 113, 129, 37, 113, 156, 57, 149, 52, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 182, 31, 54, 178, 10, 221, 143, 189, 89, 240, 38, 190, 53, 127, 237, 86, 82, 52, 72, 51, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 182, 31, 54, 178, 10, 221, 143, 189, 89, 240, 38, 190, 53, 127, 68, 75, 182, 58, 206, 54, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 182, 31, 54, 178, 10, 221, 143, 189, 89, 240, 38, 190, 53, 127, 189, 75, 182, 58, 201, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 32, 178, 158, 60, 103, 190, 172, 134, 163, 190, 86, 127, 203, 88, 73, 58, 116, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 32, 178, 158, 60, 103, 190, 172, 134, 163, 190, 86, 127, 58, 86, 73, 58, 120, 53, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 89, 240, 166, 61, 12, 221, 143, 189, 197, 146, 16, 190, 63, 103, 241, 86, 82, 52, 51, 50, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 89, 240, 166, 61, 12, 221, 143, 189, 197, 146, 16, 190, 63, 103, 184, 82, 125, 58, 148, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 65, 198, 66, 62, 244, 148, 226, 190, 70, 118, 152, 190, 117, 173, 210, 115, 94, 57, 71, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 140, 69, 40, 62, 75, 70, 103, 190, 64, 250, 140, 190, 93, 92, 198, 96, 239, 57, 7, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 196, 146, 16, 62, 12, 221, 143, 189, 90, 240, 166, 189, 62, 87, 242, 81, 152, 52, 67, 49, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 196, 146, 16, 62, 12, 221, 143, 189, 90, 240, 166, 189, 62, 87, 173, 89, 85, 58, 81, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 226, 169, 168, 62, 188, 191, 226, 190, 175, 71, 34, 190, 120, 206, 216, 121, 48, 57, 202, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 14, 185, 145, 62, 90, 95, 103, 190, 26, 193, 30, 190, 92, 68, 195, 103, 181, 57, 163, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 89, 240, 38, 62, 10, 221, 143, 189, 167, 131, 91, 50, 52, 74, 235, 71, 16, 53, 184, 48, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 89, 240, 38, 62, 10, 221, 143, 189, 167, 131, 91, 50, 52, 74, 169, 98, 58, 58, 8, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 185, 187, 194, 62, 56, 244, 226, 190, 149, 26, 2, 61, 124, 254, 30, 126, 12, 57, 89, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 121, 66, 168, 62, 24, 126, 103, 190, 36, 109, 24, 60, 82, 45, 195, 109, 141, 57, 65, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 196, 146, 16, 62, 10, 221, 143, 189, 91, 240, 166, 61, 39, 65, 231, 56, 154, 53, 184, 48, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 196, 146, 16, 62, 10, 221, 143, 189, 91, 240, 166, 61, 39, 65, 169, 107, 41, 58, 187, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 138, 160, 168, 62, 68, 33, 227, 190, 94, 72, 99, 62, 78, 2, 28, 122, 241, 56, 237, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 82, 182, 145, 62, 124, 152, 103, 190, 12, 203, 49, 62, 56, 38, 196, 114, 113, 57, 224, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 92, 240, 166, 61, 12, 221, 143, 189, 197, 146, 16, 62, 22, 65, 233, 46, 18, 54, 67, 49, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 92, 240, 166, 61, 12, 221, 143, 189, 197, 146, 16, 62, 22, 65, 174, 117, 34, 58, 107, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 166, 179, 66, 62, 68, 61, 227, 190, 20, 234, 184, 62, 44, 6, 19, 123, 224, 56, 131, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 28, 64, 40, 62, 227, 168, 103, 190, 140, 123, 150, 62, 32, 39, 200, 119, 97, 57, 125, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 203, 124, 213, 178, 10, 221, 143, 189, 89, 240, 38, 62, 0, 75, 237, 41, 87, 54, 51, 50, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 203, 124, 213, 178, 10, 221, 143, 189, 89, 240, 38, 62, 0, 75, 78, 123, 36, 58, 24, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 205, 243, 55, 179, 107, 70, 227, 190, 247, 255, 210, 62, 0, 9, 11, 125, 217, 56, 24, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 36, 179, 64, 174, 103, 190, 38, 6, 173, 62, 0, 49, 206, 125, 91, 57, 24, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 92, 240, 166, 189, 10, 221, 143, 189, 196, 146, 16, 62, 234, 65, 241, 41, 87, 54, 72, 51, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 92, 240, 166, 189, 10, 221, 143, 189, 196, 146, 16, 62, 234, 65, 84, 112, 34, 58, 197, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 166, 179, 66, 190, 68, 61, 227, 190, 20, 234, 184, 62, 212, 6, 242, 125, 224, 56, 173, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 28, 64, 40, 190, 226, 168, 103, 190, 140, 123, 150, 62, 224, 39, 55, 121, 97, 57, 179, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 199, 146, 16, 190, 12, 221, 143, 189, 90, 240, 166, 61, 217, 65, 241, 45, 18, 54, 28, 52, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 199, 146, 16, 190, 12, 221, 143, 189, 90, 240, 166, 61, 217, 65, 85, 103, 41, 58, 117, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 140, 160, 168, 190, 68, 33, 227, 190, 90, 72, 99, 62, 178, 2, 234, 124, 241, 56, 66, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 84, 182, 145, 190, 124, 152, 103, 190, 10, 203, 49, 62, 200, 38, 61, 115, 113, 57, 80, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 91, 240, 38, 190, 12, 221, 143, 189, 110, 194, 126, 49, 204, 74, 235, 56, 154, 53, 97, 52, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 91, 240, 38, 190, 12, 221, 143, 189, 110, 194, 126, 49, 204, 74, 82, 95, 58, 58, 40, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 185, 187, 194, 190, 56, 244, 226, 190, 142, 26, 2, 61, 132, 254, 230, 126, 12, 57, 174, 55, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 120, 66, 168, 190, 25, 126, 103, 190, 15, 109, 24, 60, 174, 45, 64, 109, 141, 57, 222, 55, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 199, 146, 16, 190, 12, 221, 143, 189, 90, 240, 166, 189, 194, 87, 230, 70, 16, 53, 97, 52, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 199, 146, 16, 190, 12, 221, 143, 189, 90, 240, 166, 189, 194, 87, 76, 87, 85, 58, 190, 55, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 228, 169, 168, 190, 188, 191, 226, 190, 173, 71, 34, 190, 136, 206, 34, 123, 48, 57, 204, 54, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 16, 185, 145, 190, 90, 95, 103, 190, 24, 193, 30, 190, 164, 68, 64, 103, 181, 57, 27, 55, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 98, 240, 166, 189, 12, 221, 143, 189, 197, 146, 16, 190, 193, 103, 233, 80, 152, 52, 28, 52, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 98, 240, 166, 189, 12, 221, 143, 189, 197, 146, 16, 190, 193, 103, 67, 82, 125, 58, 57, 55, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 73, 198, 66, 190, 244, 148, 226, 190, 70, 118, 152, 190, 139, 173, 39, 117, 95, 57, 210, 53, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 148, 69, 40, 190, 75, 70, 103, 190, 64, 250, 140, 190, 163, 92, 60, 96, 239, 57, 82, 54, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 74, 166, 145, 178, 6, 6, 248, 191, 228, 62, 116, 61, 122, 129, 52, 102, 184, 7, 56, 58, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 74, 166, 145, 178, 6, 6, 248, 191, 228, 62, 116, 61, 122, 129, 204, 102, 67, 8, 240, 55, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 74, 166, 145, 178, 6, 6, 248, 191, 228, 62, 116, 61, 122, 129, 254, 3, 56, 26, 59, 46, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 210, 111, 92, 178, 7, 174, 195, 191, 198, 248, 196, 189, 88, 129, 67, 105, 147, 49, 97, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 210, 111, 92, 178, 7, 174, 195, 191, 198, 248, 196, 189, 88, 129, 188, 105, 148, 49, 158, 53, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 1, 233, 129, 178, 119, 219, 221, 191, 44, 71, 6, 61, 92, 129, 70, 102, 86, 45, 176, 58, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 1, 233, 129, 178, 119, 219, 221, 191, 44, 71, 6, 61, 92, 129, 186, 102, 87, 45, 0, 55, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 18, 64, 5, 62, 199, 170, 195, 191, 139, 56, 123, 189, 97, 165, 54, 104, 140, 50, 237, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 132, 139, 80, 61, 104, 4, 248, 191, 76, 15, 150, 61, 122, 174, 249, 5, 184, 7, 59, 49, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 132, 139, 80, 61, 104, 4, 248, 191, 76, 15, 150, 61, 122, 174, 38, 98, 93, 35, 11, 58, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 155, 57, 144, 61, 81, 218, 221, 191, 163, 140, 83, 61, 99, 166, 53, 101, 175, 46, 114, 58, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 79, 210, 102, 62, 89, 162, 195, 191, 192, 198, 10, 61, 98, 193, 39, 102, 35, 51, 132, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 182, 165, 180, 61, 166, 255, 247, 191, 146, 104, 226, 61, 119, 205, 23, 100, 205, 38, 222, 57, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 182, 165, 180, 61, 166, 255, 247, 191, 146, 104, 226, 61, 119, 205, 245, 6, 110, 39, 48, 51, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 48, 212, 249, 61, 41, 215, 221, 191, 13, 88, 211, 61, 99, 193, 39, 100, 195, 47, 46, 58, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 98, 72, 133, 62, 1, 152, 195, 191, 107, 235, 39, 62, 93, 224, 27, 103, 124, 51, 34, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 234, 170, 208, 61, 97, 248, 247, 191, 34, 98, 37, 62, 111, 241, 11, 105, 174, 40, 174, 57, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 234, 170, 208, 61, 97, 248, 247, 191, 34, 98, 37, 62, 111, 241, 244, 18, 125, 45, 65, 52, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 20, 66, 16, 62, 197, 210, 221, 191, 152, 203, 49, 62, 91, 221, 29, 101, 73, 48, 233, 57, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 10, 225, 102, 62, 33, 143, 195, 191, 138, 151, 150, 62, 65, 234, 15, 106, 174, 51, 198, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 92, 200, 180, 61, 80, 240, 247, 191, 217, 154, 89, 62, 70, 241, 3, 110, 163, 41, 125, 57, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 92, 200, 180, 61, 80, 240, 247, 191, 217, 154, 89, 62, 70, 241, 222, 75, 19, 49, 97, 52, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 153, 229, 249, 61, 93, 206, 221, 191, 190, 240, 121, 62, 62, 228, 20, 103, 146, 48, 163, 57, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 193, 78, 5, 62, 157, 137, 195, 191, 83, 97, 199, 62, 38, 236, 5, 111, 197, 51, 110, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 134, 208, 80, 61, 247, 233, 247, 191, 18, 221, 127, 62, 39, 239, 0, 114, 58, 42, 75, 57, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 134, 208, 80, 61, 247, 233, 247, 191, 18, 221, 127, 62, 39, 239, 253, 111, 74, 51, 185, 51, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 244, 74, 144, 61, 39, 203, 221, 191, 88, 98, 151, 62, 35, 228, 12, 105, 191, 48, 93, 57, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 190, 219, 24, 179, 209, 135, 195, 191, 92, 61, 217, 62, 0, 230, 254, 112, 201, 51, 24, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 216, 45, 222, 178, 143, 231, 247, 191, 220, 239, 134, 62, 0, 232, 0, 114, 108, 42, 24, 57, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 216, 45, 222, 178, 143, 231, 247, 191, 220, 239, 134, 62, 0, 232, 254, 113, 81, 52, 158, 49, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 170, 60, 236, 178, 253, 201, 221, 191, 202, 13, 161, 62, 0, 221, 3, 107, 212, 48, 24, 57, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 194, 78, 5, 190, 157, 137, 195, 191, 83, 97, 199, 62, 218, 236, 246, 110, 197, 51, 194, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 141, 208, 80, 189, 247, 233, 247, 191, 18, 221, 127, 62, 217, 239, 0, 114, 58, 42, 229, 56, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 141, 208, 80, 189, 247, 233, 247, 191, 18, 221, 127, 62, 217, 239, 253, 113, 81, 52, 59, 46, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 248, 74, 144, 189, 39, 203, 221, 191, 88, 98, 151, 62, 221, 228, 249, 106, 191, 48, 210, 56, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 12, 225, 102, 190, 33, 143, 195, 191, 136, 151, 150, 62, 191, 234, 238, 107, 174, 51, 106, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 98, 200, 180, 189, 80, 240, 247, 191, 216, 154, 89, 62, 186, 241, 253, 110, 163, 41, 179, 56, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 98, 200, 180, 189, 80, 240, 247, 191, 216, 154, 89, 62, 186, 241, 251, 111, 85, 51, 52, 40, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 157, 229, 249, 189, 93, 206, 221, 191, 188, 240, 121, 62, 194, 228, 239, 102, 146, 48, 141, 56, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 98, 72, 133, 190, 1, 152, 195, 191, 106, 235, 39, 62, 163, 224, 228, 104, 124, 51, 13, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 238, 170, 208, 189, 97, 248, 247, 191, 34, 98, 37, 62, 145, 241, 245, 106, 174, 40, 129, 56, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 238, 170, 208, 189, 97, 248, 247, 191, 34, 98, 37, 62, 145, 241, 252, 82, 60, 49, 186, 7, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 21, 66, 16, 190, 197, 210, 221, 191, 151, 203, 49, 62, 165, 221, 228, 100, 73, 48, 71, 56, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 81, 210, 102, 190, 89, 162, 195, 191, 198, 198, 10, 61, 158, 193, 217, 103, 35, 51, 87, 55, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 188, 165, 180, 189, 166, 255, 247, 191, 147, 104, 226, 61, 137, 205, 233, 101, 206, 38, 82, 56, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 188, 165, 180, 189, 166, 255, 247, 191, 147, 104, 226, 61, 137, 205, 243, 25, 253, 45, 91, 28, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 52, 212, 249, 189, 41, 215, 221, 191, 15, 88, 211, 61, 157, 193, 216, 99, 195, 47, 1, 56, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 24, 64, 5, 190, 199, 170, 195, 191, 139, 56, 123, 189, 159, 165, 202, 103, 141, 50, 133, 54, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 148, 139, 80, 189, 104, 4, 248, 191, 76, 15, 150, 61, 134, 174, 219, 99, 94, 35, 36, 56, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 148, 139, 80, 189, 104, 4, 248, 191, 76, 15, 150, 61, 134, 174, 1, 3, 164, 40, 33, 41, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 164, 57, 144, 189, 81, 218, 221, 191, 163, 140, 83, 61, 157, 166, 202, 100, 175, 46, 124, 55, 1, 2, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 102, 21, 83, 178, 26, 37, 172, 191, 222, 142, 22, 190, 107, 129, 41, 114, 44, 52, 178, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 102, 21, 83, 178, 26, 37, 172, 191, 222, 142, 22, 190, 107, 129, 215, 113, 45, 52, 253, 52, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 65, 207, 19, 190, 232, 34, 172, 191, 232, 239, 221, 189, 143, 171, 227, 114, 120, 52, 8, 54, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 59, 207, 19, 62, 233, 34, 172, 191, 238, 239, 221, 189, 113, 171, 29, 114, 120, 52, 44, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 236, 3, 128, 62, 55, 29, 172, 191, 128, 242, 50, 187, 116, 204, 17, 115, 166, 52, 179, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 216, 212, 147, 62, 59, 22, 172, 191, 41, 255, 16, 62, 119, 249, 6, 120, 191, 52, 68, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 228, 8, 128, 62, 61, 16, 172, 191, 105, 104, 146, 62, 80, 0, 0, 125, 202, 52, 220, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 38, 217, 19, 62, 132, 12, 172, 191, 42, 133, 200, 62, 45, 3, 249, 125, 206, 52, 121, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 8, 48, 33, 179, 78, 11, 172, 191, 239, 83, 220, 62, 0, 7, 8, 126, 206, 52, 24, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 39, 217, 19, 190, 132, 12, 172, 191, 42, 133, 200, 62, 211, 3, 7, 124, 206, 52, 183, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 230, 8, 128, 190, 61, 16, 172, 191, 103, 104, 146, 62, 176, 0, 2, 123, 203, 52, 84, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 216, 212, 147, 190, 59, 22, 172, 191, 40, 255, 16, 62, 137, 249, 250, 119, 191, 52, 216, 55, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 236, 3, 128, 190, 55, 29, 172, 191, 0, 242, 50, 187, 140, 204, 239, 115, 167, 52, 250, 54, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 65, 149, 155, 62, 105, 231, 54, 191, 119, 190, 132, 61, 106, 236, 31, 117, 78, 56, 108, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 146, 154, 27, 62, 96, 207, 54, 191, 0, 48, 75, 190, 104, 168, 34, 123, 114, 56, 107, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 65, 149, 155, 190, 105, 231, 54, 191, 115, 190, 132, 61, 150, 236, 222, 118, 78, 56, 136, 55, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 249, 186, 134, 190, 197, 242, 54, 191, 128, 247, 93, 62, 183, 245, 232, 117, 62, 56, 56, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 134, 215, 38, 179, 37, 252, 54, 191, 85, 197, 188, 62, 0, 248, 254, 121, 49, 56, 24, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 46, 145, 27, 62, 214, 249, 54, 191, 185, 237, 167, 62, 43, 249, 9, 119, 51, 56, 135, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 175, 191, 134, 62, 42, 218, 54, 191, 215, 126, 178, 189, 107, 197, 36, 120, 97, 56, 230, 58, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 177, 191, 134, 190, 42, 218, 54, 191, 213, 126, 178, 189, 149, 197, 219, 121, 97, 56, 148, 54, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 48, 145, 27, 190, 214, 249, 54, 191, 185, 237, 167, 62, 213, 249, 243, 118, 51, 56, 169, 56, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 248, 186, 134, 62, 197, 242, 54, 191, 130, 247, 93, 62, 73, 245, 20, 118, 62, 56, 248, 57, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 182, 253, 82, 178, 53, 203, 54, 191, 132, 229, 116, 190, 96, 129, 32, 125, 123, 56, 255, 59, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 182, 253, 82, 178, 53, 203, 54, 191, 132, 229, 116, 190, 96, 129, 30, 126, 124, 56, 98, 52, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 153, 154, 27, 190, 96, 207, 54, 191, 0, 48, 75, 190, 152, 168, 223, 125, 114, 56, 139, 53, 1, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 131, 0, 28, 0, 24, 0, 131, 0, 136, 0, 28, 0, 26, 0, 14, 0, 22, 0, 30, 0, 14, 0, 26, 0, 34, 0, 14, 0, 30, 0, 38, 0, 14, 0, 34, 0, 42, 0, 14, 0, 38, 0, 46, 0, 14, 0, 42, 0, 50, 0, 14, 0, 46, 0, 54, 0, 14, 0, 50, 0, 58, 0, 14, 0, 54, 0, 139, 0, 40, 0, 36, 0, 139, 0, 135, 0, 40, 0, 62, 0, 14, 0, 58, 0, 17, 0, 14, 0, 62, 0, 133, 0, 56, 0, 52, 0, 133, 0, 132, 0, 56, 0, 103, 0, 13, 0, 107, 0, 138, 0, 52, 0, 48, 0, 138, 0, 133, 0, 52, 0, 134, 0, 48, 0, 44, 0, 134, 0, 138, 0, 48, 0, 135, 0, 44, 0, 40, 0, 135, 0, 134, 0, 44, 0, 130, 0, 36, 0, 32, 0, 130, 0, 139, 0, 36, 0, 142, 0, 16, 0, 64, 0, 142, 0, 141, 0, 16, 0, 115, 0, 13, 0, 68, 0, 83, 0, 13, 0, 87, 0, 137, 0, 64, 0, 60, 0, 137, 0, 142, 0, 64, 0, 136, 0, 32, 0, 28, 0, 136, 0, 130, 0, 32, 0, 132, 0, 60, 0, 56, 0, 132, 0, 137, 0, 60, 0, 79, 0, 13, 0, 83, 0, 117, 0, 10, 0, 11, 0, 117, 0, 120, 0, 10, 0, 111, 0, 13, 0, 115, 0, 107, 0, 13, 0, 111, 0, 99, 0, 13, 0, 103, 0, 95, 0, 13, 0, 99, 0, 91, 0, 13, 0, 95, 0, 87, 0, 13, 0, 91, 0, 74, 0, 13, 0, 79, 0, 68, 0, 13, 0, 74, 0, 24, 0, 20, 0, 15, 0, 24, 0, 25, 0, 20, 0, 25, 0, 19, 0, 20, 0, 25, 0, 23, 0, 19, 0, 28, 0, 25, 0, 24, 0, 28, 0, 29, 0, 25, 0, 29, 0, 23, 0, 25, 0, 29, 0, 27, 0, 23, 0, 32, 0, 29, 0, 28, 0, 32, 0, 33, 0, 29, 0, 33, 0, 27, 0, 29, 0, 33, 0, 31, 0, 27, 0, 36, 0, 33, 0, 32, 0, 36, 0, 37, 0, 33, 0, 37, 0, 31, 0, 33, 0, 37, 0, 35, 0, 31, 0, 40, 0, 37, 0, 36, 0, 40, 0, 41, 0, 37, 0, 41, 0, 35, 0, 37, 0, 41, 0, 39, 0, 35, 0, 44, 0, 41, 0, 40, 0, 44, 0, 45, 0, 41, 0, 45, 0, 39, 0, 41, 0, 45, 0, 43, 0, 39, 0, 48, 0, 45, 0, 44, 0, 48, 0, 49, 0, 45, 0, 49, 0, 43, 0, 45, 0, 49, 0, 47, 0, 43, 0, 52, 0, 49, 0, 48, 0, 52, 0, 53, 0, 49, 0, 53, 0, 47, 0, 49, 0, 53, 0, 51, 0, 47, 0, 56, 0, 53, 0, 52, 0, 56, 0, 57, 0, 53, 0, 57, 0, 51, 0, 53, 0, 57, 0, 55, 0, 51, 0, 60, 0, 57, 0, 56, 0, 60, 0, 61, 0, 57, 0, 61, 0, 55, 0, 57, 0, 61, 0, 59, 0, 55, 0, 64, 0, 61, 0, 60, 0, 64, 0, 65, 0, 61, 0, 65, 0, 59, 0, 61, 0, 65, 0, 63, 0, 59, 0, 16, 0, 65, 0, 64, 0, 16, 0, 21, 0, 65, 0, 21, 0, 63, 0, 65, 0, 21, 0, 18, 0, 63, 0, 22, 0, 14, 0, 17, 0, 69, 0, 76, 0, 73, 0, 69, 0, 71, 0, 76, 0, 71, 0, 75, 0, 76, 0, 71, 0, 66, 0, 75, 0, 73, 0, 80, 0, 77, 0, 73, 0, 76, 0, 80, 0, 76, 0, 78, 0, 80, 0, 76, 0, 75, 0, 78, 0, 77, 0, 84, 0, 81, 0, 77, 0, 80, 0, 84, 0, 80, 0, 82, 0, 84, 0, 80, 0, 78, 0, 82, 0, 81, 0, 88, 0, 85, 0, 81, 0, 84, 0, 88, 0, 84, 0, 86, 0, 88, 0, 84, 0, 82, 0, 86, 0, 85, 0, 92, 0, 89, 0, 85, 0, 88, 0, 92, 0, 88, 0, 90, 0, 92, 0, 88, 0, 86, 0, 90, 0, 89, 0, 96, 0, 93, 0, 89, 0, 92, 0, 96, 0, 92, 0, 94, 0, 96, 0, 92, 0, 90, 0, 94, 0, 93, 0, 100, 0, 97, 0, 93, 0, 96, 0, 100, 0, 96, 0, 98, 0, 100, 0, 96, 0, 94, 0, 98, 0, 97, 0, 104, 0, 101, 0, 97, 0, 100, 0, 104, 0, 100, 0, 102, 0, 104, 0, 100, 0, 98, 0, 102, 0, 101, 0, 108, 0, 105, 0, 101, 0, 104, 0, 108, 0, 104, 0, 106, 0, 108, 0, 104, 0, 102, 0, 106, 0, 105, 0, 112, 0, 109, 0, 105, 0, 108, 0, 112, 0, 108, 0, 110, 0, 112, 0, 108, 0, 106, 0, 110, 0, 109, 0, 116, 0, 113, 0, 109, 0, 112, 0, 116, 0, 112, 0, 114, 0, 116, 0, 112, 0, 110, 0, 114, 0, 113, 0, 72, 0, 70, 0, 113, 0, 116, 0, 72, 0, 116, 0, 67, 0, 72, 0, 116, 0, 114, 0, 67, 0, 140, 0, 24, 0, 15, 0, 140, 0, 131, 0, 24, 0, 128, 0, 0, 0, 1, 0, 128, 0, 129, 0, 0, 0, 121, 0, 7, 0, 8, 0, 121, 0, 122, 0, 7, 0, 129, 0, 9, 0, 0, 0, 129, 0, 119, 0, 9, 0, 119, 0, 12, 0, 9, 0, 119, 0, 118, 0, 12, 0, 122, 0, 6, 0, 7, 0, 122, 0, 123, 0, 6, 0, 124, 0, 4, 0, 5, 0, 124, 0, 125, 0, 4, 0, 125, 0, 3, 0, 4, 0, 125, 0, 126, 0, 3, 0, 126, 0, 2, 0, 3, 0, 126, 0, 127, 0, 2, 0, 127, 0, 1, 0, 2, 0, 127, 0, 128, 0, 1, 0, 123, 0, 5, 0, 6, 0, 123, 0, 124, 0, 5, 0, 120, 0, 8, 0, 10, 0, 120, 0, 121, 0, 8, 0, 73, 0, 121, 0, 120, 0, 73, 0, 77, 0, 121, 0, 85, 0, 124, 0, 123, 0, 85, 0, 89, 0, 124, 0, 101, 0, 128, 0, 127, 0, 101, 0, 105, 0, 128, 0, 97, 0, 127, 0, 126, 0, 97, 0, 101, 0, 127, 0, 93, 0, 126, 0, 125, 0, 93, 0, 97, 0, 126, 0, 89, 0, 125, 0, 124, 0, 89, 0, 93, 0, 125, 0, 81, 0, 123, 0, 122, 0, 81, 0, 85, 0, 123, 0, 113, 0, 118, 0, 119, 0, 113, 0, 70, 0, 118, 0, 109, 0, 119, 0, 129, 0, 109, 0, 113, 0, 119, 0, 77, 0, 122, 0, 121, 0, 77, 0, 81, 0, 122, 0, 105, 0, 129, 0, 128, 0, 105, 0, 109, 0, 129, 0, 69, 0, 120, 0, 117, 0, 69, 0, 73, 0, 120, 0, 11, 0, 131, 0, 140, 0, 11, 0, 10, 0, 131, 0, 1, 0, 137, 0, 132, 0, 1, 0, 0, 0, 137, 0, 8, 0, 130, 0, 136, 0, 8, 0, 7, 0, 130, 0, 0, 0, 142, 0, 137, 0, 0, 0, 9, 0, 142, 0, 9, 0, 141, 0, 142, 0, 9, 0, 12, 0, 141, 0, 7, 0, 139, 0, 130, 0, 7, 0, 6, 0, 139, 0, 5, 0, 134, 0, 135, 0, 5, 0, 4, 0, 134, 0, 4, 0, 138, 0, 134, 0, 4, 0, 3, 0, 138, 0, 3, 0, 133, 0, 138, 0, 3, 0, 2, 0, 133, 0, 2, 0, 132, 0, 133, 0, 2, 0, 1, 0, 132, 0, 6, 0, 135, 0, 139, 0, 6, 0, 5, 0, 135, 0, 10, 0, 136, 0, 131, 0, 10, 0, 8, 0, 136, 0 ),
"blend_shape_data": [  ],
"format": 2194903,
"index_count": 648,
"primitive": 4,
"skeleton_aabb": [ AABB( 0, 0, 0, -1, -1, -1 ), AABB( -0.380338, -1.73326, -0.348773, 0.760677, 1.73747, 0.779101 ), AABB( -0.140877, -3.19042, -0.0078756, 0.281754, 1.45769, 0.322434 ) ],
"vertex_count": 143
}

[sub_resource type="Skin" id=2]
resource_name = "Skin"
bind_count = 4
bind/0/name = "Root"
bind/0/bone = -1
bind/0/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/1/name = "Thigh"
bind/1/bone = -1
bind/1/pose = Transform( 1, -2.46655e-16, -2.20676e-16, -2.20677e-16, -0.993839, 0.110837, -2.46639e-16, -0.110837, -0.993835, -7.8754e-17, -0.348165, -0.00779291 )
bind/2/name = "Shin"
bind/2/bone = -1
bind/2/pose = Transform( 1, -1.91305e-16, -2.19907e-16, -2.19903e-16, -0.990371, -0.138438, -1.9129e-16, 0.138439, -0.990368, 1.68459e-17, -1.68748, 0.42275 )
bind/3/name = "Foot"
bind/3/bone = -1
bind/3/pose = Transform( -1, 8.74228e-08, 6.34427e-16, 3.54211e-16, -4.0233e-07, 0.999997, 8.74228e-08, 1, 1.49011e-08, 2.76608e-07, 0.015421, 3.16403 )

[node name="leg1" type="Spatial"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0 )
script = ExtResource( 2 )

[node name="RestRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -3.621, 0.622 )
collision_mask = 16
debug_shape_custom_color = Color( 0.0156863, 0.192157, 1, 1 )
debug_shape_thickness = 5

[node name="leg1_Rig" type="Spatial" parent="."]

[node name="Skeleton" type="Skeleton" parent="leg1_Rig"]
bones/0/name = "Root"
bones/0/parent = -1
bones/0/rest = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bones/0/enabled = true
bones/0/bound_children = [  ]
bones/1/name = "Thigh"
bones/1/parent = 0
bones/1/rest = Transform( 1, -2.20676e-16, -2.46648e-16, -2.46654e-16, -0.993838, -0.110837, -2.20669e-16, 0.110837, -0.993842, 6.48375e-25, -0.346884, 0.0308447 )
bones/1/enabled = true
bones/1/bound_children = [  ]
bones/2/name = "Shin"
bones/2/parent = 1
bones/2/rest = Transform( 1, 5.49238e-17, -6.90061e-18, -5.4924e-17, 0.968925, -0.247355, -6.89951e-18, 0.247355, 0.968925, 2.99141e-23, 1.39144, 2.20312e-08 )
bones/2/enabled = true
bones/2/bound_children = [  ]
bones/3/name = "Foot"
bones/3/parent = 2
bones/3/rest = Transform( -1, 1.06581e-14, 8.74228e-08, -8.6581e-08, -0.138438, -0.990371, 1.21026e-08, -0.990371, 0.138438, -2.23339e-23, 1.44822, -3.44589e-08 )
bones/3/enabled = true
bones/3/bound_children = [  ]

[node name="leg1_Mesh" type="MeshInstance" parent="leg1_Rig/Skeleton"]
mesh = SubResource( 1 )
skin = SubResource( 2 )

[node name="Foot" type="BoneAttachment" parent="leg1_Rig/Skeleton"]
transform = Transform( -1, 1.0878e-14, 8.74228e-08, 8.74227e-08, -1.19209e-07, 0.999999, 8.61533e-14, 1, 5.66244e-07, -6.25527e-16, -3.16402, -0.0154225 )
bone_name = "Foot"

[node name="FootCast" type="RayCast" parent="leg1_Rig/Skeleton/Foot"]
enabled = true
collision_mask = 16
debug_shape_custom_color = Color( 0.0156863, 1, 0.101961, 1 )

[node name="IK" type="SkeletonIK" parent="leg1_Rig/Skeleton"]
process_priority = 1
root_bone = "Thigh"
tip_bone = "Foot"
use_magnet = true
magnet = Vector3( 0, 0, 3.603 )
target_node = NodePath("../../IKCont")

[node name="IKCont" type="Position3D" parent="leg1_Rig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.2213, 0.566839 )
script = ExtResource( 1 )
StepDistance = 12.0
StepHeight = 0.662
Speed = 6.911

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="leg1_Rig/IKCont"]
stream = ExtResource( 3 )
unit_db = -3.435
unit_size = 2.9
max_db = 0.0

[connection signal="finished" from="leg1_Rig/IKCont/AudioStreamPlayer3D" to="leg1_Rig/IKCont" method="_on_AudioStreamPlayer3D_finished"]
